--- a/course.css
+++ b/course.css
@@ -2,6 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    scroll-behavior: smooth;
 }
 
 
@@ -87,27 +88,13 @@ body, html {
     display: block;
     transition: transform 0.3s ease; 
 }
-.more-details,
-.more-details2,
-.more-details3,
-.more-details4,
-.more-details5,
-.more-details6,
-.more-details7,
-.more-details8,
-.more-details9,
-.more-details10,
-.more-details11,
-.more-details12,
-.more-details13,
-.more-details14,
-.more-details15,
-.more-details16,
-.more-details17,
-.more-details18
+.more-details
 {
     display: none;
 }
+.show {
+    display: block;
+  }
 .details {
     flex:1;
     text-align: center;
